projects/compiler/test/typechecker/try/error_else_return_type_mismatch.3.out
Error at %FILE_NAME%:4:38
Return type mismatch for function 'f1'
  |    val x = try some() else return some()
                                          ^
Expected Result<Int, Int>
but instead found Int?
