projects/compiler/test/typechecker/try/error_else_return_type_mismatch.3.abra
func some(): Int? = Some(123)

func f1(): Result<Int, Int> {
  val x = try some() else return some()

  Ok(x + 1)
}